# coref-ds

./: .env-example  .gitignore  README.md  pcc_structure_reversed.json  pyproject.toml  setup.cfg
coref_ds/: align.py  document.py  text.py  utils.py
coref_ds/ccl/: ccl_doc.py  utils.py
coref_ds/corefud/: corefud_doc.py  corefud_writer.py  create_pcc_split.py  preprocess.py  split_into_single_docs.py  utils.py
coref_ds/mmax/: attributes.py  markable.py  mmax_doc.py  word.py
coref_ds/tei/: mention.py  nkjp.py  pcc.py  tei_doc.py  utils.py
coref_ds/tei/layers/: coreference.py  layer.py  mention.py  morphosyntax.py  segmentation.py
tests/: test_ccl.py  test_corefud.py  test_corefud_mapping.py  test_mmax.py  test_pcc.py  test_text_api.py
