[metadata]
name = coref-ds
version = 0.1.0
author = Karol Saputa
description = Coreference Resolution API
long_description = Coreference Resolution API for dataset formats
url = https://github.com/ipipan/coref-ds
keywords = nlp, coreference, polish
[options]
python_requires = >=3.10, <4
install_requires =
    tqdm
[options.extras_require]
test =
    pytest
    coverage
[options.package_data]
package_config =